--- a/package.json
+++ b/package.json
@@ -12,27 +12,36 @@
   "license": "ISC",
   "babel": {
     "presets": [
-      "babel-preset-react",
-      "babel-preset-env"
+      "@babel/preset-react",
+      "@babel/preset-env"
     ]
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
+    "express": "^4.16.4",
+    "hbs": "^4.0.1",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-jest": "^22.4.1",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.2",
     "jest-fetch-mock": "^1.6.6",
@@ -40,7 +49,7 @@
     "react-test-renderer": "^16.2.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^2.0.9"
+    "webpack": "^4.27.1",
+    "webpack-cli": "^2.1.5"
   }
 }
