Base app up and working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pick-your-own-project",
+  "name": "dex",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -27,12 +27,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-jest": "^22.4.1",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.0",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -49,7 +48,7 @@
     "react-test-renderer": "^16.2.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^2.1.5"
+    "webpack": "4.12.0",
+    "webpack-cli": "2.0.9"
   }
 }
