Chrome extension now posting to the server on image click and loading of page

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,8 @@
     "tabs",
     "bookmarks",
     "unlimitedStorage",
-    "activeTab"
+    "activeTab",
+    "http://localhost:1234/"
   ],
   "background": {
     "scripts": ["background.js"]
