--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
     "prop-types": "^15.6.1",
