--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
     "prop-types": "^15.6.1",
+    "pusher": "^2.2.0",
+    "pusher-js": "^4.3.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   },
